[package]
name = "kafka-echo-test"
version = "0.1.0"
edition = "2021"

[dependencies]

env_logger = "0.10"
log = { version = "0.4", features = ["kv_unstable", "std", ] }
rdkafka = { version = "0.29.0", features = ["sasl"] }
rdkafka-sys = { version = "4.3.0" }
tokio = { version = "1", features = ["full", "test-util"] }
uuid = { version = "1.2.2", features = ["v4"] }
